# NovigTakeHome

./: CMakeLists.txt  README.md  docker-compose.yaml  format.sh
calc_leader/: CMakeLists.txt  calc_leader.m.cpp
calc_replica/: CMakeLists.txt  calc_replica.m.cpp
shared_calculator/: CMakeLists.txt
shared_calculator/common/: shared_calculator_common.h
shared_calculator/proto/: sharedCalculator.proto
shared_calculator/shared_calculator_leader/: CMakeLists.txt  Dockerfile  shared_calculator_bridge.cpp  shared_calculator_bridge.h  shared_calculator_leader.cpp  shared_calculator_leader.h  shared_calculator_leader.m.cpp
shared_calculator/shared_calculator_replica/: CMakeLists.txt  Dockerfile  shared_calculator_replica.cpp  shared_calculator_replica.h  shared_calculator_replica.m.cpp
start_calculator/: leader.sh  replica.sh
tests/: shared_calculator_leader.t.cpp
